# mercuryland

./: .dockerignore  .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  adjust_id.py  generate_json.py  id_right.json  id_wrong.json  index.html  insert_latest.py  insert_penalties.py  mix_char.py  numbered_vod.json  package-lock.json  package.json  read_history.py  sso.html  tailwind.config.js  todolist.txt  tsconfig.json  vite.config.js  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: build.yml  check.yml  check_back.yml  check_docker.yml  check_front.yml  merge.yml  publish.yml
.github/workflows/checks/: rust-docker.yml  vuejs.yml
jules-scratch/verification/: verify_wheel.py
public/: CNAME  data.csv
public/.well-known/: discord
resequencing_id/: id_right.json  id_wrong.json
scripts/: calc_history.py  read_history.py
src/: App.vue  config.rs  error.rs  lib.rs  main.rs  main.ts  router.ts  style.css
src/assets/: numbered_vod.json  penalty.json  penalty_status.json  schedule.json  vod.json
src/assets/data/: law_document.json  numbered_vod.json  penalty.json  vod.json
src/coin/: command.rs  config.rs  mod.rs  youtube.rs
src/components/: Admins.vue  GameMap.vue  HelloWorld.vue  Join.vue  Penalty.vue  Publication.vue  Vod.vue  Welcome.vue
src/components/contact/: Contact.vue  ContactCard.vue
src/components/join/: Join.vue
src/components/law/: ToS.vue
src/components/penalty/: OverAllList.vue  Penalty.vue  PenaltySyntax.vue  Table.vue
src/components/publication/: Archive.vue  Forms.vue  Law.vue  NewLaw.vue  Publication.vue
src/components/vod/: DataTable.vue  TimeDetail.vue  TimeSummary.vue  Vod.vue
src/components/welcome/: NextPageButton.vue  Placeholder.vue  ReturnTopButton.vue  Slide1.vue  Slide2.vue  Slide3.vue  Slide4.vue  Slide5.vue  Welcome.vue
src/composables/: utils.ts
src/database/: anonymous.rs  coin.rs  config.rs  image.rs  mod.rs  penalty.rs  user.rs  verify.rs  video.rs  wheel.rs
src/database/migration/: 001_wheel_tables.sql  002_user_tables.sql  003_rename_user.sql  004_coin_add_col.sql  005_coin_add_col_discord_id.sql  006_verify_tables.sql  006_video_tables.sql  007_user_table_restructure.sql  008_image_tables.sql  009_penalty_tables.sql  010_config_tables.sql  011_anonymous_table.sql  011_drop_wheel_table.sql  012_drop_anonymous_content.sql  mod.rs
src/discord/: anonymous.rs  auth.rs  coin.rs  command_mentions.rs  give.rs  help.rs  link.rs  mod.rs  purchase.rs  refund.rs  vote.rs  wheel.rs
src/web/: mod.rs
src/web/auth/: login.rs  mod.rs
src/web/wheel/: create.rs  update.rs
src/webpage/: mod.rs  ping.rs
src/webpage/anonymous/: list.rs  mod.rs
src/webpage/auth/: google.rs  login.rs  mod.rs  tick.rs
src/webpage/image/: get.rs  upload.rs
src/webpage/leaderboard/: get.rs  ldb.rs  mod.rs
src/youtube/: bot.rs  chat.rs  mod.rs  video.rs
web/: App.vue  env.d.ts  main.ts  router.ts  style.css
web/components/: GameMap.vue  LeaderBoard.vue  Leaderboard.vue  Login.vue  Setting.vue  ViewportHeight.vue  Wheel.vue
web/composables/: authState.ts  axios.ts  constants.ts  penalty.ts  style.ts  utils.ts  vod.ts
(+123 files in other folders)
