[package]
name = "mercury_land"
version = "2.7.1"
authors = ["logicfan", "champsing"]
edition = "2021"

[dependencies]
# web server
actix-web = "4.9"
actix-files = "0.6"
actix-cors = "0.7"
# serialization
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
# cryptography
rand = "0.8"
rsa = "0.9"
sha2 = "0.10"
hmac = "0.12"
jwt = "0.16"
# database
rusqlite = { version = "0.32", features = [
    "bundled",
    "uuid",
    "serde_json",
    "chrono",
] }
sea-query = "0.32"
sea-query-rusqlite = { version = "0.7", features = [
    "with-chrono",
    "with-json",
    "with-uuid",
] }
# discord
serenity = "0.12.4"
poise = "0.6.1"
# utility
tokio = { version = "1.41", features = ["rt-multi-thread"] }
derive_more = { version = "1.0", features = ["display", "from"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.10", features = ["v4", "v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
